@@ -48,7 +48,7 @@
 #undef INT32
 
 
-static bool initting;
+bool initting;
 bool ignore_badwindow;
 
 int handler(Display *d, XErrorEvent *e){
@@ -81,8 +81,6 @@ int handler(Display *d, XErrorEvent *e){
     return 0;
 }
 
-QList<Window> own_toplevel_windows;
-
 static Minicli* minicli = NULL;
 static Klogout* klogout = NULL;
 static Ktask* ktask = NULL;
@@ -105,9 +103,6 @@ static void setInfoBoxText(QString text, Window w){
   if (!infoFrame){
     infoFrame = new QFrame(0, 0, 
 			   WStyle_Customize | WStyle_NoBorder | WStyle_Tool);
-    Window* wp = new Window;
-    *wp = infoFrame->winId();
-    own_toplevel_windows.append(wp);
     infoFrame->setFrameStyle( QFrame::WinPanel | QFrame::Raised );
     infoFrameInner = new QFrame(infoFrame);
     infoFrameInner->setFrameStyle( QFrame::Panel | QFrame::Sunken );
@@ -216,9 +211,6 @@ static void setStringProperty(const char* atomname, const char* value){
 static void showLogout(){
   if (!klogout){
     klogout = new Klogout(0, 0, WStyle_Customize | WStyle_NoBorder | WStyle_Tool);
-    Window* wp = new Window;
-    *wp = klogout->winId();
-    own_toplevel_windows.append(wp);
     // next is a dirty hack to fix a qt-1.2 bug 
     // (should be unnecessary with 1.3)
      unsigned long data[2];
@@ -243,9 +235,6 @@ static void showLogout(){
 static void showTask(){
   if (!ktask){
     ktask = new Ktask(0, 0, WStyle_Customize | WStyle_NoBorder | WStyle_Tool);
-    Window* wp = new Window;
-    *wp = ktask->winId();
-    own_toplevel_windows.append(wp);
     // next is a dirty hack to fix a qt-1.2 bug 
     // (should be unnecessary with 1.3)
      unsigned long data[2];
@@ -482,6 +471,9 @@ MyApp::MyApp(int &argc = 0, char **argv = 0, const QString& rAppName = 0):KAppli
 
   config->sync();
 
+  XSync(qt_xdisplay(), False);
+
+  XGrabServer(qt_xdisplay()); 
   XSelectInput(qt_xdisplay(), qt_xrootwin(), 
 	       KeyPressMask |
 	       // 		 ButtonPressMask | ButtonReleaseMask |
@@ -492,12 +484,12 @@ MyApp::MyApp(int &argc = 0, char **argv = 0, const QString& rAppName = 0):KAppli
 	       );
   
   XSync(qt_xdisplay(), False);
-  initting = FALSE;
 
   manager = new Manager;
   connect(manager, SIGNAL(reConfigure()), this, SLOT(reConfigure()));
   connect(manager, SIGNAL(showLogout()), this, SLOT(showLogout()));
-  
+  XUngrabServer(qt_xdisplay()); 
+  initting = FALSE;
   restoreSession();
 }
 
@@ -876,9 +868,6 @@ bool MyApp::handleKeyPress(XKeyEvent key){
     freeKeyboard(False);
     if (!minicli){
       minicli = new Minicli(0, 0, WStyle_Customize | WStyle_NoBorder | WStyle_Tool);
-      Window* wp = new Window;
-      *wp = minicli->winId();
-      own_toplevel_windows.append(wp);
     }
     while (!minicli->do_grabbing());
     return False;
@@ -1053,7 +1042,6 @@ bool MyApp::x11EventFilter( XEvent * ev){
   case ButtonRelease:
     break;
   case CreateNotify:
-    manager->createNotify(&ev->xcreatewindow);
     break;
   case MapRequest:
     manager->mapRequest(&ev->xmaprequest);
